# superpixel-benchmark

./: .gitignore  .gitmodules  .travis.yml  ALGORITHMS_8md.html  BENCHMARK_8md.html  BUILDING_8md.html  CMakeLists.txt  DATASETS_8md.html  DATA_8md.html  DOXYGEN.md  EXAMPLES_8md.html  EXECUTABLES_8md.html  PARAMETERS_8md.html  README.md  SUBMISSION_8md.html  annotated.html  ccs__cli_2main_8cpp.html  ccs__opencv_8cpp.html  ccs__opencv_8h.html  ccs__opencv_8h_source.html  cis__opencv_8h.html  cis__opencv_8h_source.html  classBilateralFilterDriver-members.html  classBilateralFilterDriver.html  classBlurDriver-members.html  classBlurDriver.html  classCCS__OpenCV-members.html  classCCS__OpenCV.html  classCIS__OpenCV.html  classCRS__OpenCV-members.html  classCRS__OpenCV.html  classConnectedComponents-members.html  classConnectedComponents.html  classDASP__OpenCV-members.html  classDASP__OpenCV.html  classDepthTools-members.html  classERGC__OpenCV-members.html  classERGC__OpenCV.html  classERS__OpenCV-members.html  classETPS__OpenCV-members.html  (+249 more)
ccs_cli/: CMakeLists.txt  main.cpp
cis_cli/: CMakeLists.txt  main.cpp
cmake/: FindCImg.cmake  FindGlog.cmake  Findpng++.cmake
crs_cli/: CMakeLists.txt  main.cpp
cw_cli/: CMakeLists.txt  main.cpp
dasp_cli/: CMakeLists.txt  main.cpp
docker/: .dockerignore  Dockerfile  README.md  docker.patch  makefile  timer-patch.sh
docs/: ALGORITHMS.md  BENCHMARK.md  BUILDING.md  BUILDING_CIS.md  DATA.md  DATASETS.md  DOXYGEN.md  EXAMPLE.md  EXAMPLES.md  EXECUTABLES.md  PARAMETERS.md  PARAMETERS.txt  README.md  RESULTS.md  SUBMISSION.md
eams_cli/: eams_cli.m  eams_dispatcher.m  eams_dispatcher.sh
ergc_cli/: CMakeLists.txt  main.cpp
ers_cli/: CMakeLists.txt  main.cpp
etps_cli/: CMakeLists.txt  main.cpp
eval_average_cli/: CMakeLists.txt  main.cpp
eval_boundaries2labels_cli/: CMakeLists.txt  main.cpp
eval_connected_relabel_cli/: CMakeLists.txt  main.cpp
eval_parameter_optimization_cli/: CMakeLists.txt  main.cpp
eval_summary_cli/: CMakeLists.txt  main.cpp
eval_visualization_cli/: CMakeLists.txt  main.cpp
eval_visualization_fuse_cli/: CMakeLists.txt  main_fuse_2.cpp  main_fuse_3.cpp
fh_cli/: CMakeLists.txt  main.cpp
lib_ccs/: BasicStructures.cpp  BasicStructures.h  CMakeLists.txt  FriendFunctions.h  FriendFunctions2.h  Hexagon.cpp  Hexagon.h  README.md  SegmentExtraction.cpp  SegmentExtraction.h  cMOG.h  ccs_opencv.cpp  ccs_opencv.h  fMOG.cpp  helper.h  stdafx.cpp  stdafx.h  targetver.h
lib_cis/: CMakeLists.txt  cis_opencv.h  superpixels.h
lib_crs/: AGaussianFeature.h  ColorFeature.h  CompactnessFeature.h  ContourRelaxation.h  DepthFeature.h  FeatureType.h  GrayvalueFeature.h  IFeature.h  InitializationFunctions.h  LabelStatisticsGauss.h  README.md  TraversionGenerator.h  VisualizationHelper.h  crs_opencv.h  globalConstants.h
lib_cw/: CMakeLists.txt  README.md  compact_watershed.cpp  compact_watershed.h
lib_dasp/: CMakeLists.txt  README.md  dasp_opencv.cpp  dasp_opencv.h
lib_dasp/lib_dasp/: Array.hpp  Graph.hpp  IO.cpp  IO.hpp  Metric.hpp  Neighbourhood.cpp  Neighbourhood.hpp  Parameters.hpp  Plots.cpp  Plots.hpp  Point.hpp  Seed.hpp  Segmentation.cpp  Segmentation.hpp  Superpixels.cpp  Superpixels.hpp  Tools.hpp
lib_dasp/lib_dasp/eval/: Recall.cpp  Recall.hpp  ce.cpp  ev.cpp  eval.hpp  ipq.cpp  misc.cpp  use.cpp
lib_dasp/lib_dasp/impl/: Clustering.hpp  RepairDepth.cpp  RepairDepth.hpp  Sampling.cpp  Sampling.hpp
lib_dasp/lib_dasp_common/: CMakeLists.txt.template  Client.hpp  WdgtDaspParameters.cpp  WdgtDaspParameters.h  WdgtDaspParameters.ui  WdgtMain.cpp  WdgtMain.h  WdgtMain.ui  color.hpp  main.cpp.template
lib_dasp/lib_dasp_danvil/: CMakeLists.txt
lib_dasp/lib_dasp_danvil/Danvil/: Color.h  Types.h
lib_dasp/lib_dasp_danvil/Danvil/Color/: Color.h  ColorLists.h  ColorMapping.h  ColorValueArithmetics.h  HSL.h  HSV.h  LAB.h  Metrics.h  PixelMath.h  XYZ.h
lib_dasp/lib_dasp_danvil/Danvil/Tools/: Benchmark.h  Constants.h  CpuCount.h  FunctionCache.h  MoreMath.h  Timer.h  Unit.h
lib_dasp/lib_dasp_density/: CMakeLists.txt
lib_dasp/lib_dasp_density/density/: CMakeLists.txt  PointDensity.cpp  PointDensity.hpp  ScalePyramid.cpp  ScalePyramid.hpp  Smooth.cpp  Smooth.hpp  Visualization.cpp  Visualization.hpp
lib_dasp/lib_dasp_graphseg/: CMakeLists.txt  Common.hpp  IO.hpp  Labeling.cpp  Labeling.hpp  README.md  Rendering.hpp  as_range.hpp  graphseg.cpp  graphseg.hpp  segment.hpp
lib_dasp/lib_dasp_graphseg/spectral/: arpackpp.cpp  eigen.cpp  ietl.cpp  lapack.cpp  magma.cpp  solver.hpp  spectral.hpp  spectral_impl.hpp
lib_dasp/lib_dasp_ietl/ietl/: Makefile.in  complex.h  config.h.in  fmatrix.h  ietl2lapack.h  ietl2lapack_interface.h  inverse.h  iteration.h  lanczos.h  matrix.h  power.h  rayleigh.h  tmatrix.h  traits.h  vectorspace.h
lib_dasp/lib_dasp_ietl/ietl/interface/: blas.h  blitz.h  mtl.h  ublas.h  valarray.h
lib_dasp/lib_dasp_pds/: CMakeLists.txt
lib_dasp/lib_dasp_pds/pds/: CMakeLists.txt  DeltaDensitySampling.cpp  DeltaDensitySamplingOld.cpp  Fattal.cpp  Fattal.hpp  FloydSteinberg.cpp  FloydSteinbergMultiLayer.cpp  Grid.cpp  PDS.hpp  SimplifiedPDS.cpp  SimplifiedPDSOld.cpp  Tools.hpp
lib_dasp/lib_dasp_slimage/Slimage/: Buffer.hpp  Convert.hpp  Gui.hpp  IO.hpp  Iterator.hpp  Mipmap.hpp  Paint.hpp  Parallel.h  Pixel.hpp  Slimage.hpp  Types.hpp
lib_dasp/lib_dasp_slimage/Slimage/detail/: OpenCv.hpp  Qt.hpp
lib_eams/: Luv2RGB.m  Makefile  README.md  RGB2Luv.m  RGB2RGB.m  compile_edison_wrapper.m  edison_wrapper.m  edison_wrapper_mex.cpp  edison_wrapper_mex.h  edison_wrapper_mex.mexa64  make.m
lib_ergc/: Heap.h  HeapG.h  HeapL.h  README.md  ergc.h  ergc_opencv.h  timer.h  utils.h
lib_ers/: CMakeLists.txt  Edge.h  Image.h  ImageIO.h  (+22 more)
lib_etps/: CMakeLists.txt  README.md  SGMStereo.cpp  SGMStereo.h  etps_opencv.cpp  etps_opencv.h  functions.cpp  functions.h  sallocator.cpp  sallocator.h  segengine.cpp  segengine.h  smemoryxx.h  spixel.cpp  stdafx.cpp  stdafx.h  structures.cpp  structures.h  tsdeque.h  utils.cpp  utils.h
vccs_cli/: CMakeLists.txt  main.cpp
vlslic_cli/: CMakeLists.txt  main.cpp
(+956 files in other folders)
